# orchid-ng

./: .gitignore  AGENTS.md  justfile  pyproject.toml
docs/: DESIGN.md
scripts/: __init__.py  analyze_style_alignment.py  build_pdf_corpus.py  optimize_pipeline.py
src/orchid_ng/: __init__.py  __main__.py
src/orchid_ng/cli/: __init__.py  app.py
src/orchid_ng/config/: __init__.py  settings.py
src/orchid_ng/domain/: __init__.py  models.py
src/orchid_ng/integrations/: __init__.py  corpus.py  model_client.py
src/orchid_ng/prompts/: final_judge.md  load.py  refine_idea.md  review-idea.txt  search_judge.md  seed_ideas.md
src/orchid_ng/services/: __init__.py  alignment.py  config.py  evidence.py  ideation.py  judging.py  llm.py  params.py  prompts.py  ranking.py  search.py  token_usage.py
src/orchid_ng/storage/: __init__.py  run_store.py
src/orchid_ng/utils/: fs.py
src/orchid_ng/workflows/: __init__.py  calibrate.py  evaluate.py  ideate.py
tests/: conftest.py  test_config_service.py  test_llm_service.py  test_params_service.py  test_prompt_loader.py  test_token_usage_service.py
tests/config/: test_settings.py
tests/domain/: test_models.py
tests/fixtures/: corpus.jsonl
tests/integrations/: test_corpus.py  test_model_client.py
tests/services/: test_alignment.py  test_evidence.py  test_ranking.py  test_search.py
tests/workflows/: test_pipeline.py
